package com.example.template.movie;

public record GenreDto(Long id, String name) {
}
